--- a/source/pages/home/home.css
+++ b/source/pages/home/home.css
@@ -1,73 +1,59 @@
 html, body {
 	background-color: #1E1D1D;
-	color: #fff;
-	/*font-family: ;*/
-}
-
-h1, h2, h3, h4, h5, h6 {
-
-}
-
-p, a, li, button {
-
 }
 
 header {
 	background-color: #2D2C2C;
 	top: 0;
+	left: 0;
 	right: 0;
+	display: flex;
 }
 
-header img {
-	width: 60px;
-	height: 60px;
+
+
+img {
+	width: 75px;
+	height: 75px;
 	border-radius: 80px;
+}
+
+main {
+	display: block;
+	left: 0;
 	right: 0;
-}
-
-input {
-	width: 700px;
-	height: 35px;
-	border-radius: 8px;
-	color: #353434;
-	font-family: monospace;
-}
-
-.search {
-	text-align: center;
+	buttom: 0;
 }
 
 aside {
-	position: absolute;
-	left: 0;
 	background-color: #353434;
+	display: grid;
+	position: absolute;
+	top: 0;
+	left: 0;
+	buttom: 0;
+	height: 100%;
 }
 
-.topic {
-	background-color: #353434;
+aside > div {
+	background-color: #070707;
+	padding: 20px;
+	width: 50px;
+	height: 50px;
+}
+
+img {
+	display: block;
+	margin: 0 auto;
 }
 
 footer {
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
 	background-color: #070707;
-}
-
-.pic {
-	background-color: #AFACAA;
-	width: 50px;
-	height: 50px;
-	border-radius: 8px;
 	position: absolute;
+	display: flex;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	margin: 10px;
-	padding: 10px;
+	width: 100%;
+	height: 150px;
 }
-
-/*header > form {
-	background-color: #2D2C2C;
-}*/
