--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -30,3 +30,11 @@ a:active {
 h1, h2, h3, h4, h5, h6 {
 
 }
+
+.avatar {
+	/*background-color: #AFACAA;*/
+	border: 4px solid #000;
+	border-radius: 80px;
+	width: 75px;
+	height: 75px;
+}
