--- a/source/pages/home/home.css
+++ b/source/pages/home/home.css
@@ -10,14 +10,6 @@ header {
 	display: flex;
 }
 
-
-
-img {
-	width: 75px;
-	height: 75px;
-	border-radius: 80px;
-}
-
 main {
 	display: block;
 	left: 0;
@@ -27,24 +19,12 @@ main {
 
 aside {
 	background-color: #353434;
-	display: grid;
 	position: absolute;
 	top: 0;
 	left: 0;
 	buttom: 0;
+	width: 100px;
 	height: 100%;
-}
-
-aside > div {
-	background-color: #070707;
-	padding: 20px;
-	width: 50px;
-	height: 50px;
-}
-
-img {
-	display: block;
-	margin: 0 auto;
 }
 
 footer {
@@ -56,4 +36,69 @@ footer {
 	bottom: 0;
 	width: 100%;
 	height: 150px;
+}
+
+form {
+	position: relative;
+	width: 800px;
+	margin: 0 auto;
+}
+
+input {
+	width: 100%;
+	height: 45px;
+	outline: none;
+	border-radius: 8px;
+	background-color: #6B6A69;
+	padding-left: 5px;
+	margin-top: 20px;
+}
+
+input::-webkit-input-placeholder {
+	color: #AFACAA;
+}
+
+input:-moz-placeholder {
+	color: #AFACAA;
+}
+
+input:-ms-input-placeholder {
+	color: #AFACAA;
+}
+
+.search button {
+	top: 0;
+	right: 0;
+	width: 32px;
+	height: 32px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	cursor: pointer;
+	margin: 25px auto;
+}
+
+.burger {
+	display: block;
+	margin: 
+}
+
+.topic {
+	display: block;
+	text-align: center;
+}
+
+.topic:hover {
+	/*background-color: #070707;*/
+}
+
+aside .add-playlist {
+	background-color: #070707;
+	border-radius: 80px;
+	padding: 10px;
+	bottom: 0;
+}
+
+.playlist {
+	background-color: #070707;
 }
