--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -32,9 +32,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .avatar {
-	/*background-color: #AFACAA;*/
+	background-color: #AFACAA;
 	border: 4px solid #000;
 	border-radius: 80px;
-	width: 75px;
-	height: 75px;
+	margin-right: 25px;
 }
