--- a/source/pages/home/home.css
+++ b/source/pages/home/home.css
@@ -5,15 +5,13 @@ html, body {
 header {
 	background-color: #2D2C2C;
 	top: 0;
-	left: 0;
-	right: 0;
+	width: 100%;
 	display: flex;
 }
 
 main {
 	display: block;
-	left: 0;
-	right: 0;
+	width: 100%;
 	buttom: 0;
 }
 
@@ -31,8 +29,6 @@ footer {
 	background-color: #070707;
 	position: absolute;
 	display: flex;
-	left: 0;
-	right: 0;
 	bottom: 0;
 	width: 100%;
 	height: 150px;
@@ -69,8 +65,6 @@ input:-ms-input-placeholder {
 .search button {
 	top: 0;
 	right: 0;
-	width: 32px;
-	height: 32px;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -80,7 +74,7 @@ input:-ms-input-placeholder {
 
 .burger {
 	display: block;
-	margin: 
+	/*margin: ;*/
 }
 
 .topic {
