home: update page

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -3,11 +3,13 @@ html, body {
 }
 
 .wrapper {
-	width: 100%;
+	display: flex;
+	min-height: 100%;
+	overflow: hidden;
+	flex-direction: column;
 }
 
 .search {
-	display: flex;
 	background-color: #2d2c2c;
 }
 
