--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -8,6 +8,7 @@
 	margin: 0;
 	padding: 0;
 	border: 0;
+	box-sizing: border-box;
 }
 
 html, body {
@@ -35,9 +36,14 @@ nav > input {
 nav > img.avatar {
 	width: 58px;
 	height: 58px;
-	border:  4px solid #000;
+	border: 4px solid #000;
 	border-radius: 50% !important;
 	background-color: #afacaa;
+}
+
+nav > button > img {
+	width: 30px;
+	height: 32px;
 }
 
 main {
@@ -47,15 +53,49 @@ main {
 	width: 100%;
 }
 
+main > div.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+/*main > div.container > .one {
+	background-color: #fa7637;
+	border: 1px solid #999;
+	border-radius: 16px;
+	z-index: 1;
+}
+
+main > div.container > .two {
+	background-color: #e26139;
+	border: 1px solid #999;
+	border-radius: 16px;
+	z-index: -1;
+}
+
+main > div.container > .three {
+	background-color: #ef5126;
+	border: 1px solid #999;
+	border-radius: 16px;
+	z-index: -2;
+}*/
+
 aside {
 	display: block;
 	justify-content: center;
 	align-items: center;
-	background-color: #353434;
-	width: 92px;
-	height: 684px;
+	text-align: center;
 	position: absolute;
 	top: 0;
+	left: 0;
+	background-color: #353434;
+	width: 92px;
+	height: 100%;
+}
+
+aside.sidebar > img {
+	width: 92px;
+	height: 87px;
 }
 
 aside > ul.menu > li {
@@ -71,6 +111,7 @@ footer {
 	background-color: #070707;
 	width: 100%;
 	height: 131px;
+	z-index: auto;
 }
 
 footer > div.player > img {
@@ -79,6 +120,7 @@ footer > div.player > img {
 	border-radius: 21px;
 	background-color: #afacaa;
 	text-align: center;
+	/* border: 4px solid #fff; */
 }
 
 div.player {
